# pointblank

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  small_table.parquet  styles.css
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: ci-docs.yaml  ci-tests.yaml  code-checks.yaml
blog/: index.html  index.xml
blog/all-about-actions/: index.html
blog/intro-pointblank/: index.html
blog/lets-workshop-together/: index.html
blog/overhauled-user-guide/: index.html
blog/validation-libs-2025/: index.html
confirm/: __init__.py  test_col_vals_gt.py
data_raw/: business_dataset.qmd  game_revenue.csv  global_sales_dataset.qmd  worldcities.csv  x-01-duckdb.qmd  x-01-parquet.qmd  x-02-duckdb.qmd  x-02-sqlite.qmd  x-03-parquet.qmd  x-03-sqlite.qmd
demos/: index.html
demos/01-starter/: index.html
demos/02-advanced/: index.html
demos/03-data-extracts/: index.html
demos/04-sundered-data/: index.html
demos/05-step-report-column-check/: index.html
demos/06-step-report-schema-check/: index.html
demos/07-validation-with-actions/: index.html
demos/08-validation-with-final-actions/: index.html
demos/apply-checks-to-several-columns/: index.html
demos/check-for-freshness/: index.html
demos/check-row-column-counts/: index.html
demos/checks-for-missing/: index.html
demos/col-vals-custom-expr/: index.html
demos/column-selector-functions/: index.html
demos/comparisons-across-columns/: index.html
demos/custom-validation-specially/: index.html
demos/expect-no-duplicate-rows/: index.html
demos/expect-no-duplicate-values/: index.html
demos/expect-text-pattern/: index.html
demos/failure-thresholds/: index.html
demos/mutate-table-in-step/: index.html
demos/numeric-comparisons/: index.html
demos/schema-check/: index.html
demos/set-membership/: index.html
demos/using-parquet-data/: index.html
docs/: _quarto.yml  index.qmd  styles.css
docs/articles/: intro.qmd
docs/blog/: index.qmd
docs/demos/: index.qmd
docs/examples/: index.qmd
docs/get-started/: across.qmd  actions.qmd  columns.qmd  index.qmd  preprocessing.qmd  thresholds.qmd  types.qmd
docs/scripts/: post-render.py
docs/user-guide/: across.qmd  actions.qmd  assertions.qmd  briefs.qmd  cli-data-inspection.qmd  cli-data-validation.qmd  cli-reference.qmd  cli.qmd  col-summary-tbl.qmd  column-selection-patterns.qmd  columns.qmd  draft-validation.qmd  expressions.qmd  extracts.qmd  index.qmd  installation.qmd  langs.qmd  missing-vals-tbl.qmd  preprocessing.qmd  preview.qmd  schema-validation.qmd  segmentation.qmd  step-reports.qmd  sundering.qmd  thresholds.qmd  types.qmd  validation-methods.qmd  validation-overview.qmd  yaml-reference.qmd  yaml-validation-workflows.qmd
pointblank/: __init__.py  _comparison.py  _constants.py  _constants_autobriefs.py  _constants_docs.py  _constants_expect_fail.py  _constants_translations.py  _datascan_utils.py  _interrogation.py  _typing.py  _utils.py  _utils_check_args.py  _utils_html.py  _utils_profiling.py  actions.py  assistant.py  cli.py  column.py  compare.py  comparison.py  datascan.py  draft.py  preview.py  scan_profile.py  scan_profile_stats.py  schema.py  segments.py  test.py  test_col_vals_gt.py  tf.py  thresholds.py  utils.py  validate.py  yaml.py
pointblank/data/: api-docs.txt  polars-api-docs.txt  small_table.csv
reference/: Actions.html  DataScan.html  DraftValidation.html  FinalActions.html  Schema.html  Thresholds.html  Validate.above_threshold.html  Validate.all_passed.html  Validate.assert_below_threshold.html  Validate.assert_passing.html  Validate.col_count_match.html  Validate.col_exists.html  Validate.col_schema_match.html  Validate.col_vals_between.html  Validate.col_vals_eq.html  Validate.col_vals_expr.html  Validate.col_vals_ge.html  Validate.col_vals_gt.html  Validate.col_vals_in_set.html  Validate.col_vals_le.html  Validate.col_vals_lt.html  Validate.col_vals_ne.html  Validate.col_vals_not_in_set.html  Validate.col_vals_not_null.html  Validate.col_vals_null.html  Validate.col_vals_outside.html  Validate.col_vals_regex.html  Validate.conjointly.html  Validate.critical.html  Validate.error.html  Validate.f_failed.html  Validate.f_passed.html  Validate.get_data_extracts.html  Validate.get_json_report.html  Validate.get_step_report.html  Validate.get_sundered_data.html  Validate.get_tabular_report.html  Validate.html  Validate.interrogate.html  Validate.n.html  (+30 more)
scripts/: post-render.py
site_libs/bootstrap/: bootstrap-163b3d65f110c20398c9be181c3bc6fb.min.css  bootstrap-24cc0281d7d77ef511317975bf15a0db.min.css  bootstrap-7a20cca8b90711b4aa27f23ac0648a9c.min.css  bootstrap-b3a3f0431126c7e8c477b326e3ee3944.min.css
tests/: __init__.py  conftest.py  test__interrogation.py  test__utils.py  test__utils_check_args.py  test__utils_profiling.py  test_actions.py  test_assistant.py  test_cli.py  test_column.py  test_compare.py  test_comparison.py  test_datascan.py  test_draft.py  test_interrogation.py  test_meta.py  test_preview.py  test_schema.py  test_segments.py  test_test.py  test_tf.py  test_thresholds.py  test_utils.py  test_utils_check_args.py  test_validate.py  test_validation.py  test_yaml.py
tests/manual_tests/: schema_step_reports.qmd
tests/tbl_files/: taxi_part_01.parquet  (+12 more)
translations/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pt-BR.md  README.zh-CN.md
user-guide/: across.html  actions.html  assertions.html  briefs.html  col-summary-tbl.html  column-selection-patterns.html  columns.html  draft-validation.html  expressions.html  extracts.html  index.html  installation.html  langs.html  missing-vals-tbl.html  preprocessing.html  preview.html  schema-validation.html  segmentation.html  step-reports.html  sundering.html  thresholds.html  types.html  validation-methods.html  validation-overview.html
(+161 files in other folders)
