[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["pointblank"]

[project]
name = "pointblank"
description = "Find out if your data is what you think it is."
readme = "README.md"
keywords = [
    "data",
    "quality",
    "validation",
    "testing",
    "data science",
    "data engineering",
]
license.file = "LICENSE"
authors = [{ name = "Richard Iannone", email = "riannone@me.com" }]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "commonmark>=0.9.1",
    "importlib-metadata",
    "great_tables>=0.17.0",
    "narwhals>=1.24.1",
    "typing_extensions>=3.10.0.0",
    "requests>=2.31.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
pd = ["pandas>=2.2.3"]
pl = ["polars>=1.24.0"]
generate = ["chatlas>=0.3.0", "anthropic[bedrock]>=0.45.2", "openai>=1.63.0", "shiny>=1.3.0"]
databricks = ["ibis-framework[databricks]>=9.5.0"]
duckdb = ["ibis-framework[duckdb]>=9.5.0"]
mysql = ["ibis-framework[mysql]>=9.5.0"]
mssql = ["ibis-framework[mssql]>=9.5.0"]
postgres = ["ibis-framework[postgres]>=9.5.0"]
pyspark = ["ibis-framework[pyspark]>=9.5.0"]
snowflake = ["ibis-framework[snowflake]>=9.5.0"]
sqlite = ["ibis-framework[sqlite]>=9.5.0"]
docs = [
    "jupyter",
    "nbclient>=0.10.0",
    "nbformat>=5.10.4",
    "quartodoc>=0.8.1; python_version >= '3.9'",
    "pandas>=2.2.3",
    "polars>=1.17.1",
]

[dependency-groups]
dev = [
    "chatlas>=0.6.1",
    "duckdb>=1.1.3",
    "griffe==0.38.1",
    "ibis-framework[duckdb,mysql,postgres,sqlite]>=9.5.0",
    "jupyter",
    "nbclient>=0.10.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pre-commit==2.15.0",
    "pyarrow",
    "pytest>=3",
    "pytest-cov",
    "pytest-randomly>=3.16.0",
    "pytest-rerunfailures>=15.0",
    "pytest-snapshot",
    "pytest-xdist>=3.6.1",
    "quartodoc>=0.8.1; python_version >= '3.9'",
    "ruff>=0.9.9",
]

[project.urls]
homepage = "https://github.com/posit-dev/pointblank"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=pointblank"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
exclude = ["docs", ".venv", "tests/*"]

ignore = [
    "E402", # module level import not at top of file
    "E501", # line too long (maximum 100 characters)
    "F811", # redefinition of unused name
    "E203", # whitespace before ':'
    "F841", # local variable 'name' is assigned to but never used
    "E702", # multiple statements on one line (semicolon)
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]
